Fixing attach icon misalignment + Fix unread message shadow and change colors entries for correct file

--- a/client/stylesheets/base.less
+++ b/client/stylesheets/base.less
@@ -1954,12 +1954,11 @@ a.github-fork {
 	width: 100%;
 	z-index: 11;
 	font-weight: bold;
-	background-color: #E6F4FD;
 	line-height: 30px;
 	font-size: 12px;
 	padding: 0 10px;
-	box-shadow: 1px 1px 2px rgba(0,0,0,.2);
-	color: #068FE4;
+	box-shadow: 0 1px 2px rgba(0,0,0,.2);
+
 	text-transform: uppercase;
 	text-align: center;
 
@@ -2113,7 +2112,8 @@ a.github-fork {
 			}
 			> .file {
 				width: 44px;
-				height: 36px;
+				height: 38px;
+                margin-top: 1px;
 				font-size: 22px;
 				padding: 6px 0;
 				text-align: center;
